<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

           <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:elevation="10dp"
            android:padding="20dp"
            app:cardCornerRadius="10dp">

               <LinearLayout
                   android:layout_width="371dp"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <ImageView
                       android:layout_width="336dp"
                       android:layout_height="400dp"
                       android:layout_gravity="center"
                       android:layout_margin="20dp"
                       android:layout_marginLeft="30dp"
                       android:id="@+id/poster"/>
                   <com.like.LikeButton
                       app:icon_type="Star"
                       android:id="@+id/fav"
                       android:layout_width="150dp"
                       android:layout_height="wrap_content"
                       app:circle_start_color="@color/colorPrimary"
                       app:like_drawable="@drawable/star_on"
                       app:unlike_drawable="@drawable/star_off"
                       app:dots_primary_color="@color/colorAccent"
                       app:dots_secondary_color="@color/colorPrimary"
                       app:circle_end_color="@color/colorAccent"
                       app:icon_size="25dp"
                       app:anim_scale_factor="2"
                       app:is_enabled="true"
                       />

                   <LinearLayout
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:layout_margin="10dp"
                           android:text="@string/title"
                           android:textSize="30dp"
                           android:textColor="#123"
                           android:textStyle="bold" />
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:layout_margin="10dp"
                           android:text="title"
                           android:textSize="25dp"
                           android:id="@+id/tv1"
                           />
                   </LinearLayout>
                   <LinearLayout
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_margin="10dp"
                       android:text="@string/vote"
                       android:textSize="30dp"
                       android:textColor="#123"
                       android:textStyle="bold"/>
                   <TextView
                       android:layout_width="713dp"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:layout_margin="25dp"
                       android:padding="5dp"
                       android:text="vote"
                       android:id="@+id/tv2"
                       />
                   </LinearLayout>
               </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="10dp"
            android:padding="20dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/releasedate"
                    android:textColor="#123"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="release_date" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:elevation="10dp"
                android:padding="20dp"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:layout_margin="10dp"
                        android:textSize="30dp"
                        android:textColor="#123"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="overview"
                        android:id="@+id/tv4"
                        />
                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:textColor="#123"
                        android:textSize="15dp"
                        android:id="@+id/tv5"
                        />
                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/tv6"/>
                </LinearLayout>
        </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/review"
            android:textColor="#123"
            android:textSize="30sp"
            android:id="@+id/review"
            android:textStyle="bold"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reviewrec">
        </android.support.v7.widget.RecyclerView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/youtubeTrailers"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#123"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trailrec">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
    </ScrollView>

